--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -14,33 +14,56 @@ input {
     ========================================================================== */
 .container {
   width: 600px;
-  height: 500px;
+  height: 400px;
   background-color: #a8cce6;
   border-radius: 6px;
   margin: 50px auto;
   animation: fadein 1s;
   transition: all .5s ease-in-out;
   box-shadow: 0px 0px 10px 2px rgba(132, 152, 166, 0.72);
+  position: relative;
 }
 
 .small-size {
-  width: 300px;
-  height: 200px;
+  width: 379px;
+  height: 230px;
 }
 
 #question-prompt {
   text-align: center;
-  font-size: 18px;
+  font-size: 22px;
   padding: 30px 0 10px 0;
+}
+
+#correct-answer {
+  text-align: center;
+  color: #0791d0;
+}
+
+#game-over {
+  font-size: 20px;
+  margin-top: 31px;
+}
+
+#wins {
+  padding: 13px;
+}
+
+#info {
+  padding: 10px 17px;
+  text-align: center;
+  line-height: 18px;
 }
 
 .countdown {
   height: 25px;
   text-align: center;
+  margin-top: 20px;
 }
 
 #img-container {
-  width: 150px;
+  width: 240px;
+  margin: 0 auto;
 }
 
 div > img {
@@ -54,7 +77,7 @@ div > img {
   display: flex;
   flex-direction: column;
   width: 50%;
-  margin: 27px auto;
+  margin: 0 auto;
 }
 
 .btn {
@@ -65,7 +88,7 @@ div > img {
   color: #ffffff;
   padding: 6px 32px;
   transition: all .3s ease-in-out;
-  animation: fadein 2s;
+  animation: fadein 3s;
   display: block;
   margin: 0 auto;
 }
